<resources>
    <string name="app_name">MSlocombe-technical</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_description">Log in to your Student Beans account</string>
    <string name="log_in">Log in</string>
    <string name="email_error">Email cannot be empty</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="back">Back</string>
    <string name="photos_title">Photos</string>
    <string name="error_description">Something went wrong!</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
</resources>